// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create_department_v1 validates name: long name 1`] = `
DirectoryError {
  "code": "invalid_name",
  "error": Object {
    "code": "invalid_name",
    "message": "Name must be from 2 to 40 letters",
    "params": Object {
      "name": "11111111111111111111111111111111111111111",
      "parentId": 0,
    },
    "type": "INVALID_PARAMS",
  },
  "type": "INVALID_PARAMS",
}
`;

exports[`create_department_v1 validates name: no name 1`] = `
DirectoryError {
  "code": "invalid_name",
  "error": Object {
    "code": "invalid_name",
    "message": "Name must be from 2 to 40 letters",
    "params": Object {
      "name": "",
      "parentId": 0,
    },
    "type": "INVALID_PARAMS",
  },
  "type": "INVALID_PARAMS",
}
`;

exports[`create_department_v1 validates name: short name 1`] = `
DirectoryError {
  "code": "invalid_name",
  "error": Object {
    "code": "invalid_name",
    "message": "Name must be from 2 to 40 letters",
    "params": Object {
      "name": "1",
      "parentId": 0,
    },
    "type": "INVALID_PARAMS",
  },
  "type": "INVALID_PARAMS",
}
`;

exports[`create_department_v1 validates parentId: invalid parent id 1`] = `
DirectoryError {
  "code": "invalid_parent_id",
  "error": Object {
    "code": "invalid_parent_id",
    "message": "Department parent id must be valid",
    "params": Object {
      "name": "12",
      "parentId": 0,
    },
    "type": "INVALID_PARAMS",
  },
  "type": "INVALID_PARAMS",
}
`;
